--- a/Frontend/idpa/src/login.css
+++ b/Frontend/idpa/src/login.css
@@ -323,6 +323,8 @@ section {
     max-width: 1068px;
     margin-left: auto;
     margin-right: auto;
+    background: #fff;
+    width: 100%;
 }
 
 header {
@@ -400,8 +402,6 @@ header {
                 0 0 16px #FADB61,
                 0 0 32px #FADB61;
 }
-
-
 
 /* Responsive */
 @media (max-width: 1080px) {
